feat(database): added Local Database for data persistence